--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "firebase": "^10.13.1",
     "fs-extra": "^11.2.0",
     "isomorphic-dompurify": "^2.16.0",
+    "jsqr": "^1.4.0",
     "mind-ar": "^1.2.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-joystick-component": "^6.2.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.26.2",
     "tinymce": "^7.4.1",
     "vite-plugin-pwa": "^0.20.5",
